--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -53,7 +53,7 @@ jobs:
           else
             # Default behavior for PR merges: bump the pre-release version
             # e.g., 1.0.0-alpha.1 -> 1.0.0-alpha.2
-            echo "VERSION_ARG=prerelease --preid=alpha" >> $GITHUB_ENV
+            echo "VERSION_ARG=prerelease" >> $GITHUB_ENV
             echo "Executing Auto Pre-release Bump"
           fi
 
